# ssh-snap

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
assets/: ssh-snap.desktop
src/: app.rs  lib.rs  main.rs  models.rs
src/core/: mod.rs  ssh.rs  storage.rs
src/ui/: mod.rs  window.rs
src/ui/dialogs/: add_dialog.rs  mod.rs
